--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
 
     <!-- Normalize CSS-->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+
+    <!--Logo onglet-->
+    <link rel="shortcut icon" type='Image/x-icon' href="./assets/restaurant/logo/ohmyfood_onglet.png">
     
 </head>
 
 <body>
 
+<div class="loader">
+    
 <div class="main-container">
+
     <!-- Header-->
 <header>
 
@@ -182,6 +188,8 @@
 </section>
 
 </footer>
+
+</div>
 
 </div>
 
