--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -18,6 +18,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
+
+        
+        <!--Logo onglet-->
+        <link rel="shortcut icon" type='Image/x-icon' href="./assets/restaurant/logo/ohmyfood_onglet.png">
+
     </head>
 
     <body>
@@ -30,7 +35,7 @@
             <i class="fa-solid fa-arrow-left header__previous"></i>
         </a>
                 <!-- Logo -->
-                    <a class ="logo_link" href="index.html">
+                    <a class ="logo_link" href="#">
                         <img class="ohmyfood_logo" src="./assets/restaurant/logo/ohmyfood.png" alt="logo ohmyfood">
                     </a>
         </div>
@@ -44,14 +49,15 @@
     <main class="menu">
         <div class="menu__header">
             <h2 class="menu__title">La palette du goût</h2>
-            <button class="menu__btn">
-                <i class="menu__like fa-regular fa-heart"></i>
-            </button>
+            <div class="heart-container">
+                <i class="fa-regular fa-heart like-icon__empty"></i>
+                <i class="fa-solid fa-heart like-icon__full"></i>
+            </div>
         </div>
 
                 <!-- Entrées-->
 
-    <div class="submenus">
+    <div class="submenus-1">
         <section class="submenu">
             <h3 class="submenu__title">Entrées</h3>
             <div class="submenu__line"></div>
@@ -61,27 +67,38 @@
                     <p class="menu-item__description">Au piment d'Espelette</p>
                 </div>
                 <div class="menu-item__price">25€</div>
+                <div class="menu-item__good">
+                    Check
+                </div>
             </section>
+
             <section class="menu-item">
                 <div class="menu-item__header">
                     <h4 class="menu-item__title">Foie gras de canard mi-cuit</h4>
                     <p class="menu-item__description">Et ses copeaux de truffe noire</p>
                 </div>
                 <div class="menu-item__price">35€</div>
+                <div class="menu-item__good">
+                    Check
+                </div>
             </section>
+
             <section class="menu-item">
                 <div class="menu-item__header">
                     <h4 class="menu-item__title">Œuf au plat</h4>
                     <p class="menu-item__description">Assaisonné à la truffe sur lit de caviar</p>
                 </div>
                 <div class="menu-item__price">20€</div>
+                <div class="menu-item__good">
+                    Check
+                </div>
             </section>
         </section>
     </div>
 
                 <!-- Plats-->
 
-    <div class="submenus">
+    <div class="submenus-2">
         <section class="submenu">
             <h3 class="submenu__title">Plats</h3>
             <div class="submenu__line"></div>
@@ -112,7 +129,7 @@
 
                 <!-- Desserts-->
 
-        <div class="submenus">
+        <div class="submenus-3">
             <section class="submenu">
                 <h3 class="submenu__title">Dessert</h3>
                 <div class="submenu__line"></div>
