--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -65,6 +65,9 @@
                 <p class="menu-item__description">Aux zestes d'orange</p>
             </div>
             <div class="menu-item__price">25€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -72,6 +75,9 @@
                 <p class="menu-item__description">Carotte, panais, topinambour</p>
             </div>
             <div class="menu-item__price">35€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -79,6 +85,9 @@
                 <p class="menu-item__description">Revisitée</p>
             </div>
             <div class="menu-item__price">20€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
     </section>
 </div>
@@ -95,6 +104,9 @@
                 <p class="menu-item__description">Accompagnées d'une purée de panais</p>
             </div>
             <div class="menu-item__price">40€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -102,6 +114,9 @@
                 <p class="menu-item__description">Et parmentier de pommes de terre</p>
             </div>
             <div class="menu-item__price">35€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -109,6 +124,9 @@
                 <p class="menu-item__description">Sur son lit de gnocchis aux légumes</p>
             </div>
             <div class="menu-item__price">44€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
     </section>
 </div>
@@ -126,6 +144,9 @@
                     <p class="menu-item__description">Et purée de noisettes</p>
                 </div>
                 <div class="menu-item__price">18€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
             <section class="menu-item">
                 <div class="menu-item__header">
@@ -133,6 +154,9 @@
                     <p class="menu-item__description">Revisité</p>
                 </div>
                 <div class="menu-item__price">22€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
             <section class="menu-item">
                 <div class="menu-item__header">
@@ -140,6 +164,9 @@
                     <p class="menu-item__description">Myrtilles et pâte d’amande</p>
                 </div>
                 <div class="menu-item__price">23€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
 
         </section>
