--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 </head>
 
 <body>
-
-<div class="loader">
     
 <div class="main-container">
+    <div class="loader">
+        <span class="loader-points"></span>
+    </div>
 
     <!-- Header-->
 <header>
@@ -188,8 +189,6 @@
 </section>
 
 </footer>
-
-</div>
 
 </div>
 
