--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="menu-item__price">25€</div>
                 <div class="menu-item__good">
-                    Check
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </section>
 
@@ -79,7 +79,7 @@
                 </div>
                 <div class="menu-item__price">35€</div>
                 <div class="menu-item__good">
-                    Check
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </section>
 
@@ -90,7 +90,7 @@
                 </div>
                 <div class="menu-item__price">20€</div>
                 <div class="menu-item__good">
-                    Check
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </section>
         </section>
@@ -108,6 +108,9 @@
                     <p class="menu-item__description">Accompagné de sa ribambelle de légumes</p>
                 </div>
                 <div class="menu-item__price">40€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
             <section class="menu-item">
                 <div class="menu-item__header">
@@ -115,6 +118,9 @@
                     <p class="menu-item__description">À la truffe noire sur sa purée de panais</p>
                 </div>
                 <div class="menu-item__price">35€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
             <section class="menu-item">
                 <div class="menu-item__header">
@@ -122,6 +128,9 @@
                     <p class="menu-item__description">Aux agrumes</p>
                 </div>
                 <div class="menu-item__price">44€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
         </section>
     </div>
@@ -139,6 +148,9 @@
                         <p class="menu-item__description">Revisité</p>
                     </div>
                     <div class="menu-item__price">18€</div>
+                    <div class="menu-item__good">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </section>
                 <section class="menu-item">
                     <div class="menu-item__header">
@@ -146,6 +158,9 @@
                         <p class="menu-item__description">Et glace à la vanille de Madagascar</p>
                     </div>
                     <div class="menu-item__price">22€</div>
+                    <div class="menu-item__good">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </section>
                 <section class="menu-item">
                     <div class="menu-item__header">
@@ -153,6 +168,9 @@
                         <p class="menu-item__description">Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <div class="menu-item__price">23€</div>
+                    <div class="menu-item__good">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
                 </section>
             </section>
             </div>
