--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -66,6 +66,9 @@
                 <p class="menu-item__description">Assaisonné au yuzu</p>
             </div>
             <div class="menu-item__price">25€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -73,6 +76,9 @@
                 <p class="menu-item__description">Et sa farandole de petits légumes</p>
             </div>
             <div class="menu-item__price">35€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -80,6 +86,9 @@
                 <p class="menu-item__description">Aux truffes</p>
             </div>
             <div class="menu-item__price">20€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
     </section>
 </div>
@@ -96,6 +105,9 @@
                 <p class="menu-item__description">Et sa crème de truffe</p>
             </div>
             <div class="menu-item__price">40€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -103,6 +115,9 @@
                 <p class="menu-item__description">Et ses légumes de saison</p>
             </div>
             <div class="menu-item__price">35€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -110,6 +125,9 @@
                 <p class="menu-item__description">Et sa purée de panais</p>
             </div>
             <div class="menu-item__price">44€</div>
+            <div class="menu-item__good">
+                <i class="fa-solid fa-circle-check"></i>
+            </div>
         </section>
     </section>
 </div>
@@ -127,6 +145,9 @@
                     <p class="menu-item__description">Du chef</p>
                 </div>
                 <div class="menu-item__price">18€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
             <section class="menu-item">
                 <div class="menu-item__header">
@@ -134,6 +155,9 @@
                     <p class="menu-item__description">Revisitée</p>
                 </div>
                 <div class="menu-item__price">22€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
             <section class="menu-item">
                 <div class="menu-item__header">
@@ -141,6 +165,9 @@
                     <p class="menu-item__description">À la noisette</p>
                 </div>
                 <div class="menu-item__price">23€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
         </section>
         </div>
