--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -66,6 +66,9 @@
                 <p class="menu-item__description">Accompagnées de leur crème à la truffe</p>
             </div>
             <div class="menu-item__price">25€</div>
+            <div class="menu-item__good">
+                Check
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -73,6 +76,9 @@
                 <p class="menu-item__description">Sur blini à la farine de blé noir</p>
             </div>
             <div class="menu-item__price">35€</div>
+            <div class="menu-item__good">
+                Check
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -80,6 +86,9 @@
                 <p class="menu-item__description">Marinés aux zestes d'orange</p>
             </div>
             <div class="menu-item__price">20€</div>
+            <div class="menu-item__good">
+                Check
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -87,6 +96,9 @@
                 <p class="menu-item__description">Confiture de figue et pain toasté</p>
             </div>
             <div class="menu-item__price">35€</div>
+            <div class="menu-item__good">
+                Check
+            </div>
         </section>
     </section>
 </div>
@@ -103,6 +115,9 @@
                 <p class="menu-item__description">Sur lit de purée de céleri-rave</p>
             </div>
             <div class="menu-item__price">40€</div>
+            <div class="menu-item__good">
+                Check
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -110,6 +125,9 @@
                 <p class="menu-item__description">Purée de patate douce</p>
             </div>
             <div class="menu-item__price">35€</div>
+            <div class="menu-item__good">
+                Check
+            </div>
         </section>
         <section class="menu-item">
             <div class="menu-item__header">
@@ -117,6 +135,9 @@
                 <p class="menu-item__description">Et riz sauvage aux zestes de citron</p>
             </div>
             <div class="menu-item__price">44€</div>
+            <div class="menu-item__good">
+                Check
+            </div>
         </section>
     </section>
 </div>
@@ -134,6 +155,9 @@
                     <p class="menu-item__description">Glace au caramel brun et sel de Guérande</p>
                 </div>
                 <div class="menu-item__price">18€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
             <section class="menu-item">
                 <div class="menu-item__header">
@@ -141,6 +165,9 @@
                     <p class="menu-item__description">Avec son coulis de citron</p>
                 </div>
                 <div class="menu-item__price">22€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
             <section class="menu-item">
                 <div class="menu-item__header">
@@ -148,6 +175,9 @@
                     <p class="menu-item__description">Déstructurée</p>
                 </div>
                 <div class="menu-item__price">23€</div>
+                <div class="menu-item__good">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
             </section>
         </section>
         </div>
