Compilation du fichier style.css

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -219,9 +219,7 @@
                         </li>
 
                         <li class="footer__list--page">
-                            <a class="footer__link" href="#">
-                                Contact
-                            </a>
+                            <a class="footer__link" href="mailto:contact@ohmyfood.fr">Contact</a>
                         </li>
                     </ul>
                 </div>
