--- a/note_enchantee.html
+++ b/note_enchantee.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="menu-item__price">25€</div>
                         <div class="menu-item__good">
-                            Check
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </section>
                     <section class="menu-item">
@@ -80,7 +80,7 @@
                         </div>
                         <div class="menu-item__price">35€</div>
                         <div class="menu-item__good">
-                            Check
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </section>
                     <section class="menu-item">
@@ -90,7 +90,7 @@
                         </div>
                         <div class="menu-item__price">20€</div>
                         <div class="menu-item__good">
-                            Check
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </section>
                     <section class="menu-item">
@@ -100,7 +100,7 @@
                         </div>
                         <div class="menu-item__price">35€</div>
                         <div class="menu-item__good">
-                            Check
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </section>
                 </section>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="menu-item__price">40€</div>
                         <div class="menu-item__good">
-                            Check
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </section>
                     <section class="menu-item">
@@ -129,7 +129,7 @@
                         </div>
                         <div class="menu-item__price">35€</div>
                         <div class="menu-item__good">
-                            Check
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </section>
                     <section class="menu-item">
@@ -139,7 +139,7 @@
                         </div>
                         <div class="menu-item__price">44€</div>
                         <div class="menu-item__good">
-                            Check
+                            <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </section>
                 </section>
@@ -229,10 +229,9 @@
                         </li>
 
                         <li class="footer__list--page">
-                            <a class="footer__link" href="#">
-                                Contact
-                            </a>
+                            <a class="footer__link" href="mailto:contact@ohmyfood.fr">Contact</a>
                         </li>
+                        
                     </ul>
                 </div>
 
