--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -219,9 +219,7 @@
                         </li>
 
                         <li class="footer__list--page">
-                            <a class="footer__link" href="#">
-                                Contact
-                            </a>
+                            <a class="footer__link" href="mailto:contact@ohmyfood.fr">Contact</a>
                         </li>
                     </ul>
                 </div>
